[build-system]
requires = [
  "setuptools",
  "conan<2.0.0",
  "scikit-build>=0.11.0",
  "cmake!=3.17.1,!=3.17.0",
  "ninja",
  "pybind11>2.6",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
skip = "pp* *musllinux* *i686* *win32* cp38-* cp39-* cp3??t-*"
test-command = "python {project}/tools/verify_wheels.py"
# We need to use pre-built versions of Numpy and Scipy in the tests; they have a
# tendency to crash if they're installed from source by `pip install`, and since
# Numpy 1.22 there are no i686 wheels, so we force pip to use older ones without
# restricting any dependencies that Numpy and Scipy might have.
before-test = "pip install --only-binary=numpy,scipy numpy scipy"

[tool.cibuildwheel.linux]
before-all = "dnf install -y openblas-devel"

[tool.cibuildwheel.macos]
# The macOS images we use have a newer clang than the ancient version of conan
# knows about, but it's similar enough that the build still works if we force it.
#
# TODO: We should fix the build to use a modern version of conan.  This hack is
# duplicated in the macOS CI test runner.
before-build = [
    "python -m pip install 'conan<2.0.0'",
    "conan config init --force",
    "sed -i '' 's/\"16.0\"/\"16.0\", \"17.0\"/' ~/.conan/settings.yml",
]

[tool.cibuildwheel.windows]
environment = { CMAKE_GENERATOR = "Visual Studio 17 2022"}

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
