[build-system]
requires = [
  "setuptools",
  "scikit-build>=0.11.0",
  "cmake>=3.24",
  "ninja",
  "pybind11>=3.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
skip = "pp* *musllinux* *i686* *win32* cp38-* cp39-* cp3??t-*"
test-command = "python {project}/tools/verify_wheels.py"
# We need to use pre-built versions of Numpy and Scipy in the tests; they have a
# tendency to crash if they're installed from source by `pip install`, and since
# Numpy 1.22 there are no i686 wheels, so we force pip to use older ones without
# restricting any dependencies that Numpy and Scipy might have.
before-test = "pip install --only-binary=numpy,scipy numpy scipy"

[tool.cibuildwheel.linux]
before-all = "dnf install -y openblas-devel"

[tool.cibuildwheel.macos]
# Apple's clang doesn't ship libomp, so the wheel must bundle one. Install the
# R-project's prebuilt LLVM OpenMP into /usr/local: it's a universal (arm64 +
# x86_64) library with a Big Sur (darwin20 / macOS 11) minimum target, which
# matches the wheel deployment target set below and lets delocate accept it.
# OpenMP_ROOT=/usr/local skips the CMake-side `brew --prefix libomp` probe.
before-all = "curl -fsSL https://mac.r-project.org/openmp/openmp-18.1.8-darwin20-Release.tar.gz | sudo tar -xz -C /"
# Pin both wheel arches to macOS 11.0 to match the bundled libomp's minimum
# target. arm64 has never supported pre-11.0 anyway.
environment = { OpenMP_ROOT = "/usr/local", MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
environment = { CMAKE_GENERATOR = "Visual Studio 17 2022"}

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
