[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "qiskit-aer"
description = "Aer - High performance simulators for Qiskit"
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.10"
authors = [
  { name = "AER Development Team", email = "qiskit@us.ibm.com" },
]
keywords = ["qiskit", "simulator", "quantum computing", "backend"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "qiskit>=1.1.0",
  "numpy>=1.16.3",
  "scipy>=1.0",
  "psutil>=5",
  "python-dateutil>=2.8.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Qiskit/qiskit-aer"
Repository = "https://github.com/Qiskit/qiskit-aer"
Documentation = "https://qiskit.org/ecosystem/aer/"

# CUDA-enabled wheels are published under separate package names
# (qiskit-aer-gpu, qiskit-aer-gpu-cu11) by tools/configure_package_name.py
# rewriting this file in CI before invocation of cibuildwheel.

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.24"
cmake.build-type = "Release"
wheel.packages = ["qiskit_aer"]
sdist.exclude = [
  ".github",
  ".tox",
  "build",
  "dist",
  "docs",
  "test",
  "_skbuild",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "qiskit_aer/VERSION.txt"
regex = "(?P<value>\\S+)"

[tool.cibuildwheel]
# Pin every Linux arch to the AlmaLinux 8-based manylinux image so all
# before-all scripts can share the same dnf incantation and target the
# same glibc baseline (2.28).
manylinux-x86_64-image  = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image   = "manylinux_2_28"
skip = "pp* *musllinux* *i686* *win32* cp38-* cp39-* cp3??t-*"
test-command = "python {project}/tools/verify_wheels.py"
# We need to use pre-built versions of Numpy and Scipy in the tests; they have a
# tendency to crash if they're installed from source by `pip install`, and since
# Numpy 1.22 there are no i686 wheels, so we force pip to use older ones without
# restricting any dependencies that Numpy and Scipy might have.
before-test = "pip install --only-binary=numpy,scipy numpy scipy"

[tool.cibuildwheel.linux]
before-all = "dnf install -y openblas-devel"

[tool.cibuildwheel.macos]
# Apple's clang doesn't ship libomp, so the wheel must bundle one. Install the
# R-project's prebuilt LLVM OpenMP into /usr/local: it's a universal (arm64 +
# x86_64) library with a Big Sur (darwin20 / macOS 11) minimum target, which
# matches the wheel deployment target set below and lets delocate accept it.
# OpenMP_ROOT=/usr/local skips the CMake-side `brew --prefix libomp` probe.
before-all = "curl -fsSL https://mac.r-project.org/openmp/openmp-18.1.8-darwin20-Release.tar.gz | sudo tar -xz -C /"
# Pin both wheel arches to macOS 11.0 to match the bundled libomp's minimum
# target. arm64 has never supported pre-11.0 anyway.
environment = { OpenMP_ROOT = "/usr/local", MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']
