[metadata]
name = qiskit-aer
author = AER Development Team
author_email = qiskit@us.ibm.com
license = Apache 2.0
description = Qiskit Aer - High performance simulators for Qiskit
keywords =
    qiskit
    aer
    simulator
    quantum
    addon
    backend
url = https://github.com/Qiskit/qiskit-aer
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False
setup_requires =
    qiskit-terra>=0.12.0
    numpy>=1.16.3;python_version>"3.5"
    numpy>=1.16.3,<1.19.0;python_version<"3.6"
    scipy>=1.0;python_version>"3.5"
    scipy>=1.0,<1.5.0;python_version<"3.6"
    cython>=0.27.1
    pybind11>=2.4
    scikit-build
    cmake!=3.17,!=3.17.0
    conan>=1.22.2
install_requires =
    qiskit-terra>=0.12.0
    numpy>=1.16.3;python_version>"3.5"
    numpy>=1.16.3,<1.19.0;python_version<"3.6"
    scipy>=1.0;python_version>"3.5"
    scipy>=1.0,<1.5.0;python_version<"3.6"
    cython>=0.27.1
    pybind11>=2.4
    # This isn't really an install requirement,
    # Pybind11 is required to be pre-installed for
    # CMake to successfully find header files.
    # This should be fixed in the CMake build files.
include_package_data = True

[options.packages.find]
include = qiskit.*